fixed file structures

--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,71 +33,159 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Analysis annotations\n",
-    "path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/20230307_expertanalysislabels_spponly.csv\"\n",
+    "path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/20230307_expertanalysislabels_spponly.csv\"\n",
     "with open(path) as f:\n",
     "  df = pd.read_csv(f)\n",
     "  df = df[df[\"filename\"] != \"BDA_24C_20181107_1.JPG\"]\n",
     "\n",
     "#Refined annotations\n",
-    "refinedpath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/CV4Ecology/Prototyping/Data/Labels/train_val_test/20230307_expertconsensuslabels.csv\"\n",
+    "refinedpath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/20230307_expertconsensuslabels_spponly.csv\"\n",
     "with open(refinedpath) as f:\n",
     "  ref = pd.read_csv(f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>annotation_ID</th>\n",
+       "      <th>bbox_orig</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labeler</th>\n",
+       "      <th>cat_orig</th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>cat_refined</th>\n",
+       "      <th>bbox_refined</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>[4428, 2707, 125, 103]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4445.5, 2719.5, 95.0, 80.5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[4308, 2731, 105, 67]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4312.5, 2739.5, 98.0, 44.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>[3707, 1761, 110, 101]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3725.5, 1779.0, 73.5, 70.5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "      <td>[3628, 1882, 90, 38]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3628.0, 1882.0, 92.0, 38.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
+       "      <td>[3669, 1927, 69, 82]</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>steven_sesnie@fws.gov</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3679.0, 1929.0, 65.0, 82.0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "array(['BDA_12C_20181127_1.JPG', 'BDA_12C_20181127_2.JPG',\n",
-       "       'BDA_12C_20181127_3.JPG', 'BDA_18A4_20181106_1.JPG',\n",
-       "       'BDA_18A4_20181106_2.JPG', 'BDA_18A4_20181106_3.JPG',\n",
-       "       'BDA_18A4_20181106_4.JPG', 'BDA_18A4_20181107_1.JPG',\n",
-       "       'BDA_18A4_20181107_2.JPG', 'BDA_18A4_20181107_3.JPG',\n",
-       "       'BDA_18A4_20181107_4.JPG', 'mxw_L13_20181215_1.JPG'], dtype=object)"
+       "   Unnamed: 0  annotation_ID               bbox_orig                filename  \\\n",
+       "0           0              1  [4428, 2707, 125, 103]  BDA_12C_20181127_1.JPG   \n",
+       "1           1              2   [4308, 2731, 105, 67]  BDA_12C_20181127_1.JPG   \n",
+       "2           2              3  [3707, 1761, 110, 101]  BDA_12C_20181127_1.JPG   \n",
+       "3           3              4    [3628, 1882, 90, 38]  BDA_12C_20181127_1.JPG   \n",
+       "4           4              5    [3669, 1927, 69, 82]  BDA_12C_20181127_1.JPG   \n",
+       "\n",
+       "                 labeler        cat_orig  cluster_id     cat_refined  \\\n",
+       "0  steven_sesnie@fws.gov  Canadian Goose           0  Canadian Goose   \n",
+       "1  steven_sesnie@fws.gov  Canadian Goose           1  Canadian Goose   \n",
+       "2  steven_sesnie@fws.gov  Canadian Goose           2  Canadian Goose   \n",
+       "3  steven_sesnie@fws.gov  Canadian Goose           3  Canadian Goose   \n",
+       "4  steven_sesnie@fws.gov  Canadian Goose           4  Canadian Goose   \n",
+       "\n",
+       "                   bbox_refined  \n",
+       "0  [4445.5, 2719.5, 95.0, 80.5]  \n",
+       "1  [4312.5, 2739.5, 98.0, 44.0]  \n",
+       "2  [3725.5, 1779.0, 73.5, 70.5]  \n",
+       "3  [3628.0, 1882.0, 92.0, 38.0]  \n",
+       "4  [3679.0, 1929.0, 65.0, 82.0]  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = df[df[\"filename\"] != \"BDA_24C_20181107_1.JPG\"]\n",
-    "df[\"filename\"].unique()"
+    "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "19324"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -106,7 +194,7 @@
        "1238"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +363,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/\"\n",
+    "savepath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/\"\n",
     "#exportanalysis = datetime.now().strftime('%Y%m%d_zooniverseanalysislabels_seagull_nodrops.csv')\n",
     "clusters.to_csv(path+\"clustercheck.csv\")"
    ]
@@ -305,61 +393,6 @@
     "print(minmax(c[\"diff\"]))\n",
     "print(c[\"diff\"].std())\n",
     "print(c[\"diff\"].var())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2375\n",
-      "Mallard                                                               1688\n",
-      "Northern Pintail                                                       262\n",
-      "Canadian Goose                                                         140\n",
-      "Other                                                                   70\n",
-      "Sandhill Crane                                                          52\n",
-      "['Mallard' 'Other']                                                     33\n",
-      "American Wigeon                                                         22\n",
-      "['Mallard' 'Northern Pintail']                                          20\n",
-      "['Northern Pintail' 'Other']                                            15\n",
-      "['American Wigeon' 'Mallard']                                           15\n",
-      "['American Wigeon' 'Mallard' 'Northern Pintail' 'Other' 'Teal']          9\n",
-      "['American Wigeon' 'Other']                                              7\n",
-      "Gadwall                                                                  5\n",
-      "['Gadwall' 'Mallard']                                                    4\n",
-      "['Other' 'Teal']                                                         4\n",
-      "['American Wigeon' 'Mallard' 'Other']                                    3\n",
-      "['Gadwall' 'Other']                                                      2\n",
-      "['Mallard' 'Northern Shoveler']                                          2\n",
-      "['Mallard' 'Northern Pintail' 'Other']                                   2\n",
-      "Teal                                                                     2\n",
-      "['Mallard' 'Other' 'Teal']                                               2\n",
-      "['American Wigeon' 'Gadwall' 'Teal']                                     2\n",
-      "Northern Shoveler                                                        2\n",
-      "['American Wigeon' 'Gadwall' 'Mallard' 'Northern Pintail' 'Other']       1\n",
-      "['Northern Pintail' 'Northern Shoveler' 'Other']                         1\n",
-      "['Gadwall' 'Northern Pintail']                                           1\n",
-      "['American Wigeon' 'Mallard' 'Northern Shoveler' 'Other' 'Ruddy']        1\n",
-      "['American Wigeon' 'Mallard' 'Other' 'Ruddy' 'Teal']                     1\n",
-      "['American Wigeon' 'Gadwall' 'Mallard' 'Other' 'Teal']                   1\n",
-      "['Gadwall' 'Mallard' 'Northern Pintail']                                 1\n",
-      "['Mallard' 'Teal']                                                       1\n",
-      "['American Wigeon' 'Mallard' 'Teal']                                     1\n",
-      "['Gadwall' 'Northern Pintail' 'Other']                                   1\n",
-      "['American Wigeon' 'Other' 'Teal']                                       1\n",
-      "['Northern Pintail' 'Northern Shoveler']                                 1\n",
-      "Name: category, dtype: int64\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Refined annotation statistics\n",
-    "print(len(ref))\n",
-    "print(ref[\"category\"].value_counts())"
    ]
   },
   {
@@ -450,7 +483,7 @@
     "#Cluster reliability: Group by filename, labeler-- count the number of original bounding boxes per labeler, get range/variance\n",
     "df['agree'] = 'No'\n",
     "df.loc[df['cat_orig'] == df[\"cat_refined\"], 'agree'] = 'Yes'\n",
-    "df.groupby(\"labeler\")[\"agree\"].value_counts()\n"
+    "df.groupby(\"labeler\")[\"agree\"].value_counts()"
    ]
   },
   {
@@ -482,7 +515,7 @@
     }
    ],
    "source": [
-    "df.groupby([\"labeler\",\"cat_refined\"])[\"agree\"].value_counts()\n"
+    "df.groupby([\"labeler\",\"cat_refined\"])[\"agree\"].value_counts()"
    ]
   },
   {
@@ -519,7 +552,7 @@
     "r = range.reset_index()\n",
     "\n",
     "r.rename( columns={0 :'count'}, inplace=True )\n",
-    "r.groupby(\"filename\")[\"count\"].apply(minmax)\n"
+    "r.groupby(\"filename\")[\"count\"].apply(minmax)"
    ]
   },
   {
@@ -547,17 +580,7 @@
     "ref['class'] = 'Duck'\n",
     "ref.loc[ref['category'] == \"Canadian Goose\", 'class'] = 'Goose'\n",
     "ref.loc[ref['category'] == \"Sandhill Crane\", 'class'] = 'Crane'\n",
-    "ref['class'].value_counts()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ref.to_csv(path+\"expertconsensus_superclass.csv\")"
+    "ref['class'].value_counts()"
    ]
   },
   {
