--- a/expertconsensus.ipynb
+++ b/expertconsensus.ipynb
@@ -13,13 +13,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import ast\n",
     "\n",
     "import sklearn.metrics\n",
     "\n",
@@ -33,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,16 +43,19 @@
     "with open(path) as f:\n",
     "  df = pd.read_csv(f)\n",
     "  df = df[df[\"filename\"] != \"BDA_24C_20181107_1.JPG\"]\n",
+    "  df['bbox_orig'] = df['bbox_orig'].apply(ast.literal_eval)\n",
+    "  #df['bbox_refined'] = df['bbox_refined'].apply(ast.literal_eval)\n",
     "\n",
     "#Refined annotations\n",
     "refinedpath = \"/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/data/expert/20230307_expertconsensuslabels_spponly.csv\"\n",
     "with open(refinedpath) as f:\n",
-    "  ref = pd.read_csv(f)"
+    "  ref = pd.read_csv(f)\n",
+    "  ref['bbox'] = ref['bbox'].apply(ast.literal_eval)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -76,74 +80,44 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Unnamed: 0</th>\n",
-       "      <th>annotation_ID</th>\n",
-       "      <th>bbox_orig</th>\n",
        "      <th>filename</th>\n",
-       "      <th>labeler</th>\n",
-       "      <th>cat_orig</th>\n",
-       "      <th>cluster_id</th>\n",
-       "      <th>cat_refined</th>\n",
-       "      <th>bbox_refined</th>\n",
+       "      <th>category</th>\n",
+       "      <th>bbox</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
-       "      <td>[4428, 2707, 125, 103]</td>\n",
        "      <td>BDA_12C_20181127_1.JPG</td>\n",
-       "      <td>steven_sesnie@fws.gov</td>\n",
-       "      <td>Canadian Goose</td>\n",
-       "      <td>0</td>\n",
        "      <td>Canadian Goose</td>\n",
        "      <td>[4445.5, 2719.5, 95.0, 80.5]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1</td>\n",
        "      <td>2</td>\n",
-       "      <td>[4308, 2731, 105, 67]</td>\n",
        "      <td>BDA_12C_20181127_1.JPG</td>\n",
-       "      <td>steven_sesnie@fws.gov</td>\n",
-       "      <td>Canadian Goose</td>\n",
-       "      <td>1</td>\n",
        "      <td>Canadian Goose</td>\n",
        "      <td>[4312.5, 2739.5, 98.0, 44.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>2</td>\n",
        "      <td>3</td>\n",
-       "      <td>[3707, 1761, 110, 101]</td>\n",
        "      <td>BDA_12C_20181127_1.JPG</td>\n",
-       "      <td>steven_sesnie@fws.gov</td>\n",
-       "      <td>Canadian Goose</td>\n",
-       "      <td>2</td>\n",
        "      <td>Canadian Goose</td>\n",
        "      <td>[3725.5, 1779.0, 73.5, 70.5]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>[3628, 1882, 90, 38]</td>\n",
        "      <td>BDA_12C_20181127_1.JPG</td>\n",
-       "      <td>steven_sesnie@fws.gov</td>\n",
-       "      <td>Canadian Goose</td>\n",
-       "      <td>3</td>\n",
        "      <td>Canadian Goose</td>\n",
        "      <td>[3628.0, 1882.0, 92.0, 38.0]</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>4</td>\n",
        "      <td>5</td>\n",
-       "      <td>[3669, 1927, 69, 82]</td>\n",
        "      <td>BDA_12C_20181127_1.JPG</td>\n",
-       "      <td>steven_sesnie@fws.gov</td>\n",
-       "      <td>Canadian Goose</td>\n",
-       "      <td>4</td>\n",
        "      <td>Canadian Goose</td>\n",
        "      <td>[3679.0, 1929.0, 65.0, 82.0]</td>\n",
        "    </tr>\n",
@@ -152,21 +126,14 @@
        "</div>"
       ],
       "text/plain": [
-       "   Unnamed: 0  annotation_ID               bbox_orig                filename  \\\n",
-       "0           0              1  [4428, 2707, 125, 103]  BDA_12C_20181127_1.JPG   \n",
-       "1           1              2   [4308, 2731, 105, 67]  BDA_12C_20181127_1.JPG   \n",
-       "2           2              3  [3707, 1761, 110, 101]  BDA_12C_20181127_1.JPG   \n",
-       "3           3              4    [3628, 1882, 90, 38]  BDA_12C_20181127_1.JPG   \n",
-       "4           4              5    [3669, 1927, 69, 82]  BDA_12C_20181127_1.JPG   \n",
+       "   Unnamed: 0                filename        category  \\\n",
+       "0           1  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
+       "1           2  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
+       "2           3  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
+       "3           4  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
+       "4           5  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
        "\n",
-       "                 labeler        cat_orig  cluster_id     cat_refined  \\\n",
-       "0  steven_sesnie@fws.gov  Canadian Goose           0  Canadian Goose   \n",
-       "1  steven_sesnie@fws.gov  Canadian Goose           1  Canadian Goose   \n",
-       "2  steven_sesnie@fws.gov  Canadian Goose           2  Canadian Goose   \n",
-       "3  steven_sesnie@fws.gov  Canadian Goose           3  Canadian Goose   \n",
-       "4  steven_sesnie@fws.gov  Canadian Goose           4  Canadian Goose   \n",
-       "\n",
-       "                   bbox_refined  \n",
+       "                           bbox  \n",
        "0  [4445.5, 2719.5, 95.0, 80.5]  \n",
        "1  [4312.5, 2739.5, 98.0, 44.0]  \n",
        "2  [3725.5, 1779.0, 73.5, 70.5]  \n",
@@ -174,13 +141,13 @@
        "4  [3679.0, 1929.0, 65.0, 82.0]  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df.head()"
+    "ref.head()"
    ]
   },
   {
@@ -585,23 +552,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Sa'doun's confusion matrix code\n",
-    "def iou(x1, y1,w1,h1,x2, y2, w2, h2):\n",
+    "def iou(ground, pred):\n",
+    "    x1 = ground[\"bbox\"][0]\n",
+    "    y1 = ground[\"bbox\"][1]\n",
+    "    w1 = ground[\"bbox\"][2]\n",
+    "    h1 = ground[\"bbox\"][3]\n",
+    "    \n",
+    "    x2 = pred[\"bbox_orig\"][0]\n",
+    "    y2 = pred[\"bbox_orig\"][1]\n",
+    "    w2 = pred[\"bbox_orig\"][2]\n",
+    "    h2 = pred[\"bbox_orig\"][3]\n",
+    "\n",
     "    w_intersection = min(x1 + w1, x2 + w2) - max(x1, x2)\n",
     "    h_intersection = min(y1 + h1, y2 + h2) - max(y1, y2)\n",
     "    if w_intersection <= 0 or h_intersection <= 0: # No overlap\n",
     "        return 0\n",
     "    I = w_intersection * h_intersection\n",
     "    U = w1 * h1 + w2 * h2 - I # Union = Total Area - I\n",
-    "    return I / U\n",
-    "\n",
-    "def class_conf(ground,pred,iou):\n",
+    "    return I / U"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>category</th>\n",
+       "      <th>bbox</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4445.5, 2719.5, 95.0, 80.5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[4312.5, 2739.5, 98.0, 44.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3725.5, 1779.0, 73.5, 70.5]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3628.0, 1882.0, 92.0, 38.0]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>BDA_12C_20181127_1.JPG</td>\n",
+       "      <td>Canadian Goose</td>\n",
+       "      <td>[3679.0, 1929.0, 65.0, 82.0]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0                filename        category  \\\n",
+       "0           1  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
+       "1           2  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
+       "2           3  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
+       "3           4  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
+       "4           5  BDA_12C_20181127_1.JPG  Canadian Goose   \n",
+       "\n",
+       "                           bbox  \n",
+       "0  [4445.5, 2719.5, 95.0, 80.5]  \n",
+       "1  [4312.5, 2739.5, 98.0, 44.0]  \n",
+       "2  [3725.5, 1779.0, 73.5, 70.5]  \n",
+       "3  [3628.0, 1882.0, 92.0, 38.0]  \n",
+       "4  [3679.0, 1929.0, 65.0, 82.0]  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ref.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def class_cm(ground,pred,iou):\n",
     "  \n",
-    "  classes = ground['class'].unique()\n",
+    "  classes = ground['category'].unique()\n",
     "  cm=np.zeros((len(classes), len(classes)+2))\n",
     "\n",
     "  for i in range(len(pred)):\n",
