problems with crowd consensus

--- a/crowdconsensus.ipynb
+++ b/crowdconsensus.ipynb
@@ -13,18 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
+    "import numpy as np\n",
     "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -603,7 +604,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>index</th>\n",
+       "      <th>annotation_id</th>\n",
+       "      <th>bbox_orig</th>\n",
+       "      <th>cat_id_orig</th>\n",
+       "      <th>category</th>\n",
+       "      <th>image_id</th>\n",
+       "      <th>filename</th>\n",
+       "      <th>labeler_id</th>\n",
+       "      <th>cluster_id</th>\n",
+       "      <th>cat_id_refined</th>\n",
+       "      <th>bbox_refined</th>\n",
+       "      <th>agree</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>956322</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>[616.8966064453125, 247.40164184570312, 78.357...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[634.05224609375, 260.4735412597656, 49.0, 80....</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>956323</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>[555.4261474609375, 212.951171875, 53.36450195...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[555.4261474609375, 216.25, 53.0, 69.0]</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>956324</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>[351.4253234863281, 212.2756805419922, 69.5764...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[369.28125, 237.5530014038086, 61.433685302734...</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>956325</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>[261.58392333984375, 108.92428588867188, 66.87...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[266.75, 120.83124542236328, 60.33087158203125...</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>956326</td>\n",
+       "      <td>956327</td>\n",
+       "      <td>[174.44451904296875, 22.46035385131836, 61.470...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Duck</td>\n",
+       "      <td>28077</td>\n",
+       "      <td>20211201_Atrisco_0459_01_01.png</td>\n",
+       "      <td>4721</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>[176.8125, 22.46035385131836, 52.0, 84.0]</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0   index  annotation_id  \\\n",
+       "0           0  956322         956323   \n",
+       "1           1  956323         956324   \n",
+       "2           2  956324         956325   \n",
+       "3           3  956325         956326   \n",
+       "4           4  956326         956327   \n",
+       "\n",
+       "                                           bbox_orig  cat_id_orig category  \\\n",
+       "0  [616.8966064453125, 247.40164184570312, 78.357...            3     Duck   \n",
+       "1  [555.4261474609375, 212.951171875, 53.36450195...            3     Duck   \n",
+       "2  [351.4253234863281, 212.2756805419922, 69.5764...            3     Duck   \n",
+       "3  [261.58392333984375, 108.92428588867188, 66.87...            3     Duck   \n",
+       "4  [174.44451904296875, 22.46035385131836, 61.470...            3     Duck   \n",
+       "\n",
+       "   image_id                         filename  labeler_id  cluster_id  \\\n",
+       "0     28077  20211201_Atrisco_0459_01_01.png        4721           0   \n",
+       "1     28077  20211201_Atrisco_0459_01_01.png        4721           1   \n",
+       "2     28077  20211201_Atrisco_0459_01_01.png        4721           8   \n",
+       "3     28077  20211201_Atrisco_0459_01_01.png        4721           2   \n",
+       "4     28077  20211201_Atrisco_0459_01_01.png        4721           3   \n",
+       "\n",
+       "  cat_id_refined                                       bbox_refined agree  \n",
+       "0              2  [634.05224609375, 260.4735412597656, 49.0, 80....    No  \n",
+       "1              2            [555.4261474609375, 216.25, 53.0, 69.0]    No  \n",
+       "2              2  [369.28125, 237.5530014038086, 61.433685302734...    No  \n",
+       "3              2  [266.75, 120.83124542236328, 60.33087158203125...    No  \n",
+       "4              2          [176.8125, 22.46035385131836, 52.0, 84.0]    No  "
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dgc.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,9 +777,56 @@
     "#Goal: report avg count, ID consensus across images, break down by morphological group; also min/max individual vs group consensus\n",
     "#Positional error: create confusion matrix, report commission error, omission error, RMSE, MAE -- bounding boxes, comparing each labeler to the consensus\n",
     "\n",
-    "#Score agreement with consensus class label\n",
-    "\n",
-    "#Score %IOU agreement with consensus box "
+    "dgc['agree'] = 'No'\n",
+    "dgc.loc[dgc['cat_id_orig'] == dgc[\"cat_id_refined\"], 'agree'] = 'Yes'\n",
+    "avg_agree = dgc.groupby(\"labeler_id\")[\"agree\"].value_counts().reset_index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "subset = dgc[dgc[\"cat_id_orig\"] == dgc[\"cat_id_refined\"]]\n",
+    "len(subset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "Length of values (1) does not match length of index (1192469)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/scripts/label-consensus-analysis/crowdconsensus.ipynb Cell 19\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/scripts/label-consensus-analysis/crowdconsensus.ipynb#X26sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m dgc[\u001b[39m'\u001b[39m\u001b[39magree1\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mwhere((dgc[\u001b[39m'\u001b[39m\u001b[39mcat_id_orig\u001b[39m\u001b[39m'\u001b[39m] \u001b[39m==\u001b[39m dgc[\u001b[39m'\u001b[39m\u001b[39mcat_id_refined\u001b[39m\u001b[39m'\u001b[39m]))\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/rowanconverse/Library/CloudStorage/OneDrive-UniversityofNewMexico/Dissertation/1_Chapter/consensus/scripts/label-consensus-analysis/crowdconsensus.ipynb#X26sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m dgc[\u001b[39m'\u001b[39m\u001b[39magree1\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\n",
+      "File \u001b[0;32m~/miniconda3/envs/dronesforducks/lib/python3.8/site-packages/pandas/core/frame.py:3655\u001b[0m, in \u001b[0;36mDataFrame.__setitem__\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3652\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_setitem_array([key], value)\n\u001b[1;32m   3653\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[1;32m   3654\u001b[0m     \u001b[39m# set column\u001b[39;00m\n\u001b[0;32m-> 3655\u001b[0m     \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_set_item(key, value)\n",
+      "File \u001b[0;32m~/miniconda3/envs/dronesforducks/lib/python3.8/site-packages/pandas/core/frame.py:3832\u001b[0m, in \u001b[0;36mDataFrame._set_item\u001b[0;34m(self, key, value)\u001b[0m\n\u001b[1;32m   3822\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39m_set_item\u001b[39m(\u001b[39mself\u001b[39m, key, value) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m   3823\u001b[0m     \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m   3824\u001b[0m \u001b[39m    Add series to DataFrame in specified column.\u001b[39;00m\n\u001b[1;32m   3825\u001b[0m \n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m   3830\u001b[0m \u001b[39m    ensure homogeneity.\u001b[39;00m\n\u001b[1;32m   3831\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m-> 3832\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_sanitize_column(value)\n\u001b[1;32m   3834\u001b[0m     \u001b[39mif\u001b[39;00m (\n\u001b[1;32m   3835\u001b[0m         key \u001b[39min\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\n\u001b[1;32m   3836\u001b[0m         \u001b[39mand\u001b[39;00m value\u001b[39m.\u001b[39mndim \u001b[39m==\u001b[39m \u001b[39m1\u001b[39m\n\u001b[1;32m   3837\u001b[0m         \u001b[39mand\u001b[39;00m \u001b[39mnot\u001b[39;00m is_extension_array_dtype(value)\n\u001b[1;32m   3838\u001b[0m     ):\n\u001b[1;32m   3839\u001b[0m         \u001b[39m# broadcast across multiple columns if necessary\u001b[39;00m\n\u001b[1;32m   3840\u001b[0m         \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mis_unique \u001b[39mor\u001b[39;00m \u001b[39misinstance\u001b[39m(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns, MultiIndex):\n",
+      "File \u001b[0;32m~/miniconda3/envs/dronesforducks/lib/python3.8/site-packages/pandas/core/frame.py:4535\u001b[0m, in \u001b[0;36mDataFrame._sanitize_column\u001b[0;34m(self, value)\u001b[0m\n\u001b[1;32m   4532\u001b[0m     \u001b[39mreturn\u001b[39;00m _reindex_for_setitem(value, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex)\n\u001b[1;32m   4534\u001b[0m \u001b[39mif\u001b[39;00m is_list_like(value):\n\u001b[0;32m-> 4535\u001b[0m     com\u001b[39m.\u001b[39;49mrequire_length_match(value, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mindex)\n\u001b[1;32m   4536\u001b[0m \u001b[39mreturn\u001b[39;00m sanitize_array(value, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mindex, copy\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m, allow_2d\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/dronesforducks/lib/python3.8/site-packages/pandas/core/common.py:557\u001b[0m, in \u001b[0;36mrequire_length_match\u001b[0;34m(data, index)\u001b[0m\n\u001b[1;32m    553\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    554\u001b[0m \u001b[39mCheck the length of data matches the length of the index.\u001b[39;00m\n\u001b[1;32m    555\u001b[0m \u001b[39m\"\"\"\u001b[39;00m\n\u001b[1;32m    556\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mlen\u001b[39m(data) \u001b[39m!=\u001b[39m \u001b[39mlen\u001b[39m(index):\n\u001b[0;32m--> 557\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\n\u001b[1;32m    558\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mLength of values \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    559\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(data)\u001b[39m}\u001b[39;00m\u001b[39m) \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    560\u001b[0m         \u001b[39m\"\u001b[39m\u001b[39mdoes not match length of index \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    561\u001b[0m         \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m(\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mlen\u001b[39m(index)\u001b[39m}\u001b[39;00m\u001b[39m)\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    562\u001b[0m     )\n",
+      "\u001b[0;31mValueError\u001b[0m: Length of values (1) does not match length of index (1192469)"
+     ]
+    }
+   ],
+   "source": [
+    "dgc['agree1'] = np.where((dgc['cat_id_orig'] == dgc['cat_id_refined']))\n",
+    "dgc['agree1'].value_counts()"
    ]
   },
   {
